# simpleVoxelEngine

./: CMakeLists.txt  README.md  main.cpp
Util/: Camera.h  Cube.h
gl/: loadGL.h
gl/objects/: ElementArrayBuffer.cpp  Texture.cpp  TextureAtlas.h  VertexArray.cpp  VertexBufferObject.cpp  VertexBufferObject.h
gl/shaders/: Shader.cpp  Shader.h
glsl/: shader1.vert  simple_colour.vert
libs/GL3.3_Core/include/glad/: glad.h
src/: main.cpp
src/app/: applicaiton.cpp  application.h
src/app/window/: window.h
src/gl/: loadGL.h
src/gl/objects/: ElementArrayBuffer.cpp  ElementArrayBuffer.h  Texture.cpp  Texture.h  TextureAtlas.cpp  VertexArray.cpp  VertexArray.h  VertexBufferObject.cpp
src/gl/shaders/: Shader.cpp
src/player/: Camera.h  Player.h
src/states/: playing.cpp  playing.h  state.cpp  state.h
src/states/stateManager/: stateManager.cpp  stateManager.h
src/util/: Camera.h  Cube.h  Logs.h  Math.h  Player.h  Ray.cpp  ToggleKey.h
src/util/math/: Math.h  Ray.cpp  Ray.h
src/window/: window.cpp  window.h
src/world/: BlockManager.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  Entity.cpp  Entity.h
src/world/chunk/: Chunk.cpp  chunk.h
world/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h
